# convex_generation

./: CMakeLists.txt  data1.txt
include/: calculate_convex.h  road_data.h  struct_data.h
src/: calculate_convex.cpp  main.cpp  road_data.cpp
